full console modal behaviour

--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -5,6 +5,16 @@
 
   .dataset-header {
     margin: 0;
+
+    &.-selectable {
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
+      &:active {
+        opacity: 0.7;
+      }
+    }
   }
 
   .dataset-detail {
