--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -19,7 +19,7 @@
     box-shadow: $box-shadow-2;
 
     .close-modal {
-      position: relative;
+      position: absolute;
       right: 0;
       top: 0;
     }
