--- a/app/scripts/components/Dataset/dataset-template.html
+++ b/app/scripts/components/Dataset/dataset-template.html
@@ -1,6 +1,6 @@
 <div class="c-dataset">
   <h2 class="-left -clean dataset-header" v-if="large">{{name}}</h2>
-  <h4 class="-left dataset-header" v-else>{{name}}</h4>
+  <h4 class="-left dataset-header -selectable" v-else @click="selectDataset">{{name}}</h4>
   <div class="dataset-detail">
     <a>{{source || 'Link'}}</a>
     <div class="dataset-badge">
