--- a/app/scripts/components/DatasetList/dataset-list-template.html
+++ b/app/scripts/components/DatasetList/dataset-list-template.html
@@ -1,5 +1,5 @@
 <div class="c-dataset-list row align-justify">
   <div class="column small-12 medium-6 large-4 featured-list-item" v-for="(dataset, index) in datasets" :key="dataset.id">
-    <dataset-component :name="dataset.name" :source="getSource(index)" :goal="dataset.goal" :target="dataset.target"></dataset-component>
+    <dataset-component :dataset="dataset"></dataset-component>
   </div>
 </div>
