--- a/app/scripts/components/Modal/modal-template.html
+++ b/app/scripts/components/Modal/modal-template.html
@@ -1,7 +1,9 @@
-<div class="c-modal">
+<div class="c-modal" v-if="open">
   <div class="row align-center">
     <div class="modal-content column small-12">
-      <icon-component name="icon-close" class="-medium -complementary -action close-modal"></icon-component>
+      <button-component :click="close" class="close-modal">
+        <icon-component name="icon-close" class="-medium"></icon-component>
+      </button-component>
       <slot></slot>
     </div>
   </div>
