--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -5,9 +5,12 @@
   </article-component>
   <modal-component :open="openModal" :close="closeModal">
     <div class="row expanded">
-      <div class="column small-10 align-middle flex">
+      <div class="column small-12 align-middle flex">
         <dataset-component :dataset="selectedDataset" large></dataset-component>
       </div>
+    </div>
+    <div class="row column">
+      <console-component></console-component>
     </div>
   </modal-component>
 </div>
