semantic tags used

--- a/app/scripts/components/Console/console-style.scss
+++ b/app/scripts/components/Console/console-style.scss
@@ -43,8 +43,9 @@
     color: $theme-base;
     font-weight: $font-weight-bold;
     padding: 0 ($small-margin / 2);
-    white-space: pre;
     font-size: $font-size-xsmall;
     line-height: 18px;
+
+    overflow: overlay;
   }
 }
