--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -3,8 +3,8 @@
     <div v-for="lang in languages" :class="classList(lang)" @click="setDisplayedLang(lang)">{{lang}}</div>
   </div>
 
-  <div class="console-content">
-    {{snippet}}
-  </div>
+  <pre class="console-content">
+    <code>{{snippet}}</code>
+  </pre>
 
 </div>
