--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -1,7 +1,7 @@
 <div :class="styles">
 
   <div class="row" v-if="location.home">
-    <div class="column small-12 medium-6 hero-home-content">
+    <div class="column small-11 medium-10 small-offset-1 medium-offset-2 large-offset-0 hero-home-content">
       <h2>Transform data on SDGs into effective applications</h2>
       <div class="c-button-group">
         <button-component class="-bordered -big" :click="goToFindOutMore">Find Out More</button-component>
