--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -1,6 +1,8 @@
 <div class="c-search row align-left">
     <div class="column small-2">
-      <dropdown-component :items="filters"></dropdown-component>
+      <dropdown-component>
+      <checkbox-component></checkbox-component>
+      </dropdown-component>
     </div>
     <div class="column small-8">
       <div class="search-bar">
