--- a/app/scripts/components/Checkbox/checkbox-template.html
+++ b/app/scripts/components/Checkbox/checkbox-template.html
@@ -1,7 +1,7 @@
 <div class="c-checkbox-group">
-  <div class="c-checkbox" v-for="item in items">
-    <input type="checkbox" name="item.name" id="item.id" value="item.value">
-    <label>
+  <div class="c-checkbox" v-for="(item, index) in items">
+    <input type="checkbox" :name="item.name" :id="getId(item.value, index)" :value="item.value" v-model="selectedFilters">
+    <label :for="getId(item.value, index)">
       <span></span>
       {{item.label}}
     </label>
