--- a/app/scripts/components/Dropdown/dropdown-style.scss
+++ b/app/scripts/components/Dropdown/dropdown-style.scss
@@ -6,9 +6,29 @@
   width: 200px;
 
   .dropdown-button {
+    display: flex;
     width: 100%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    text-align: left;
+    font-weight: $font-weight-bold;
+    justify-content: space-around;
+
+    &:after {
+      position: relative;
+      content: '';
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid $theme-base;
+      margin-left: $small-margin;
+      transform: translate(50%, 100%);
+    }
+
+    &.-opened:after {
+      transform: translate(50%, 100%) rotate(180deg);
+    }
   }
 
   .dropdown-list {
