--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -1,7 +1,7 @@
 <div class="c-search row align-left">
     <div class="column small-2">
       <dropdown-component>
-      <checkbox-component :items="filters"></checkbox-component>
+      <checkbox-component :items="filters" icon="icon-check"></checkbox-component>
       </dropdown-component>
     </div>
     <div class="column small-8">
