--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -8,6 +8,7 @@
   background-color: transparent;
   z-index: 1;
   top: 0;
+  pointer-events: none;
 
   .modal-content {
     position: relative;
@@ -17,6 +18,7 @@
     top: 25vh;
     padding: $medium-margin + $small-margin;
     box-shadow: $box-shadow-2;
+    pointer-events: all;
 
     .close-modal {
       position: absolute;
