--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -9,10 +9,10 @@
     <div class="columns small-6 medium-3 medium-offset-7">
       <nav>
         <ul>
-          <li>
+          <li :class="firstTabClass">
             <router-link to="/about">About Us</router-link>
           </li>
-          <li>
+          <li :class="secondTabClass">
             <router-link to="/playground">Playground</router-link>
           </li>
         </ul>
