--- a/app/scripts/components/Playground/playground-style.scss
+++ b/app/scripts/components/Playground/playground-style.scss
@@ -3,4 +3,18 @@
 
 .c-playground {
   min-height: 50vh;
+
+  .c-article {
+    &.-bottom {
+      margin-top: $large-margin * 2;
+    }
+
+    &:last-child {
+      padding-top: 0;
+    }
+
+    &:first-child {
+      padding: $large-margin 0;
+    }
+  }
 }
