adds missing event listeners to modal

--- a/app/scripts/components/Modal/modal-template.html
+++ b/app/scripts/components/Modal/modal-template.html
@@ -1,4 +1,4 @@
-<div class="c-modal" v-if="open">
+<div class="c-modal" v-if="open" @click="close">
   <div class="row align-center">
     <div class="modal-content column small-12">
       <button-component :click="close" class="close-modal">
