removes class that shows featured datasets always

--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -4,7 +4,7 @@
     <dataset-list-component :datasets="recentDatasets"></dataset-list-component>
   </article-component>
 
-  <article-component :class="onModalOpen">
+  <article-component>
     <h1 class="-left">Featured Datasets</h1>
     <dataset-list-component :datasets="featuredDatasets"></dataset-list-component>
   </article-component>
