--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -78,6 +78,21 @@
     </div>
   </article-component>
 
+  <article-component>
+    <slider-component>
+      <div v-for="tweet in twitterSlides">
+        <div class="tweet">
+          <h4 class="-center -uppercase">What our clients have to say</h4>
+          <p class="tweet-message">{{tweet.message}}</p>
+          <div class="tweet-user">
+            <span class="tweet-user-tag">Twitter user:</span>
+            <a class="tweet-username">@{{tweet.user}}</a>
+          </div>
+        </div>
+      </div>
+    </slider-component>
+  </article-component>
+
   <article-component class="-complementary">
     <h1>Partnership</h1>
     <h4 class="-light -center -uppercase">
