work in progress

--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -1,6 +1,6 @@
 <div class="c-console">
   <div class="tab-bar">
-    <div v-for="lang in languages" :class="classList(lang)" @click="setDisplayedLang(lang)">{{lang}}</div>
+    <div v-for="lang in languages" :class="classList(lang)" @click.stop="setDisplayedLang(lang)">{{lang}}</div>
   </div>
 
   <pre class="console-content">
