--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -44,7 +44,8 @@ $checkbox-color: #87929a;
 
         &.-item {
           &:hover {
-            background-color: $lightgrey;
+            background-color: $gold-yellow;
+            color: $theme-base;
           }
         }
       }
