--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -8,6 +8,7 @@ $gold-yellow: #EFA600;
 $lightgrey: #F3F3F3;
 $grey: grey;
 $medium-grey: #E8E8E8;
+$subtle-grey: #F2F2F2;
 
 // Fonts
 $heading-font-family: "bebas-neue", sans-serif;
@@ -38,7 +39,7 @@ $base-font-family: "proxima-nova", Helvetica, Arial, sans-serif;
 $base-font-size: $font-size-normal;
 $base-line-height: 1.5;
 
-$base-bg-color: $theme-base;
+$base-bg-color: $subtle-grey;
 $base-font-color: $dark-grey;
 
 $header-bg-color: $grayed-black;
