--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -1,3 +1,5 @@
-<div>
-  Visualization!
+<div class="c-visualization">
+  <map-component></map-component>
+  <sidebar-component></sidebar-component>
+  <timeline-component></timeline-component>
 </div>
