--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -1,4 +1,4 @@
-<div class="c-visualization">
+<div class="c-visualization l-visualization">
   <map-component></map-component>
   <sidebar-component></sidebar-component>
   <timeline-component></timeline-component>
