--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -1,9 +1,9 @@
 <div class="c-footer">
-  <div class="row">
-    <div class="columns small-6 medium-2">
+  <div class="row align-justify">
+    <div class="columns small-6 medium-3">
       <img :src="logoGlobalSDD" class="footer-logo">
     </div>
-    <div class="columns small-6 medium-2 medium-offset-8">
+    <div class="columns small-5 medium-3 medium-offset-5 large-2 large-offset-7">
       <img :src="logoVizz" class="footer-logo">
     </div>
   </div>
