--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -1,12 +1,12 @@
 <div class="c-header">
-  <div class="row align-top">
-    <div class="columns small-6 medium-2">
+  <div class="row align-top align-justify">
+    <div class="columns small-4 medium-2 medium-offset-1">
       <router-link to="/" class="header-logo">
         <img :src="d4sdgLogo">
       </router-link>
     </div>
 
-    <div class="columns small-6 medium-3 medium-offset-7">
+    <div class="columns small-6 medium-3 medium-offset-6">
       <nav>
         <ul>
           <li :class="firstTabClass">
