--- a/app/scripts/components/Home/home-style.scss
+++ b/app/scripts/components/Home/home-style.scss
@@ -45,12 +45,15 @@
   }
 
   .link-column {
-    height: 50%;
-    width: 70%;
+    height: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    > .link-column-action {
+    align-items: flex-start;
+    padding-left: $medium-margin * 2;
+
+    .link-column-action {
       color: $theme-accent;
 
       &:after {
@@ -66,6 +69,10 @@
         border-right: 2px solid $theme-accent;
 
       }
+    }
+
+    @media (min-width: 640px) and (max-width: 726px) {
+      height: 60%;
     }
   }
 
