--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -1,5 +1,9 @@
 <div class="c-visualization l-visualization">
-  <map-component></map-component>
+  <header class="visualization-header">
+    <router-link to="/" class="header-logo">
+      <img :src="d4sdgLogo">
+    </router-link>
+  </header>
   <sidebar-component></sidebar-component>
-  <timeline-component></timeline-component>
+  <map-component></map-component>
 </div>
