--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -8,4 +8,8 @@
    @input="onChange"
   >
  </multiselect>
+ <ul class="c-legend">
+   <li class="legend-item">Confirmed Deforestation Areas</li>
+   <li class="legend-item">Deforestation Alerts</li>
+ </ul>
 </aside>
