--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -11,3 +11,10 @@
   width: 100%;
   height: 100%;
 }
+
+/* Leaflet override */
+.leaflet-popup {
+  .leaflet-popup-content-wrapper {
+    border-radius: 0;
+  }
+}
