Include footer modal

--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -6,4 +6,5 @@
   </header>
   <sidebar-component></sidebar-component>
   <map-component></map-component>
+  <map-footer-component></map-footer-component>
 </div>
