--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  z-index: 1;
+  z-index: 999999999;
   top: 0;
 
   .modal-content {
