Handle modal type of content

--- a/app/scripts/components/MapFooter/map-footer-template.html
+++ b/app/scripts/components/MapFooter/map-footer-template.html
@@ -1,5 +1,5 @@
 <footer class="c-map-footer">
-  <button v-on:click="toggleModal">About the Data</button>
+  <button @click="toggleModal">About the Data</button>
   <a href="#">Learn About DATA4SDGS</a>
   <span>Mapbox</span>
 </footer>
