--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -3,6 +3,7 @@
     <router-link to="/" class="header-logo">
       <img :src="d4sdgLogo">
     </router-link>
+    <h2 class="header-title">Forests in conflict</h2>
   </header>
   <sidebar-component></sidebar-component>
   <map-component></map-component>
