--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -6,10 +6,14 @@
   </div>
   <ul class="share-links">
     <li class="share-links-item">
-      <a href="#">Facebook</a>
+      <a href="#">
+        <icon-component class="-xsmall" name="icon-facebook"></icon-component>
+      </a>
     </li>
     <li class="share-links-item">
-      <a href="#">Twitter</a>
+      <a href="#">
+        <icon-component class="-xsmall" name="icon-twitter"></icon-component>
+      </a>
     </li>
   </ul>
 </div>
