--- a/app/scripts/components/Icon/icon-style.scss
+++ b/app/scripts/components/Icon/icon-style.scss
@@ -29,6 +29,15 @@
     }
   }
 
+  &.-xsmall {
+    width: 18px;
+    height: 18px;
+    > svg {
+      height: 18px;
+      width: 18px;
+    }
+  }
+
   &.-medium {
     height: 60px;
     width: 60px;
