--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -4,7 +4,9 @@
       <img :src="d4sdgLogo">
     </router-link>
   </header>
-  <button @click="toggleModal" class="share-button" type="button"></button>
+  <button @click="toggleModal" class="share-button" type="button">
+    <icon-component class="-xsmall" name="icon-share"></icon-component>
+  </button>
   <sidebar-component></sidebar-component>
   <map-component></map-component>
   <map-footer-component></map-footer-component>
