--- a/app/scripts/components/Modal/modal-template.html
+++ b/app/scripts/components/Modal/modal-template.html
@@ -1,6 +1,6 @@
 <div class="c-modal" v-if="open" @click="close">
   <div class="row align-center">
-    <div class="modal-content column small-12">
+    <div class="modal-content column small-12" @click="stopProp">
       <button-component :click="close" class="close-modal">
         <icon-component name="icon-close" class="-medium"></icon-component>
       </button-component>
