Spinner when charging layer

--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -31,5 +31,6 @@
       </div>
       Deforestation Alerts
     </li>
+    <spinner-component :loading="layerLoading" :overlay="true" class="-absolute"></spinner-component>
   </ul>
 </aside>
