--- a/app/scripts/components/Spinner/spinner-style.scss
+++ b/app/scripts/components/Spinner/spinner-style.scss
@@ -1,8 +1,25 @@
 // Import global variables
 @import '../../../styles/variables';
-
 .c-spinner {
   position: relative;
+
+  &.-absolute {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    .spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 4;
+    }
+  }
+}
+.spinner {
   height: 70px;
   width: 70px;
   background: rgba($grayed-black, 0.7);
@@ -36,4 +53,14 @@
       }
     }
   }
+}
+
+.c-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, .4);
 }
