Hide country select

--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -1,12 +1,13 @@
 <aside class="c-sidebar">
-  <multiselect
+  <!-- <multiselect
    placeholder="Select a country"
    :close-on-select="true"
    :selected="selected"
    :options="options"
    @input="onChange"
   >
-  </multiselect>
+  </multiselect> -->
+  <h4>GLAD - iTerra Alerts</h4>
   <ul class="c-legend">
     <li class="legend-item">
       <div class="switch">
