Minor styles fits

--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -44,7 +44,7 @@
       border: 1px solid $mexican-pink !important;
       border-radius: 0!important;
       color: $mexican-pink;
-      background-color: $dark-grey;
+      background-color: transparent;
       font-weight: lighter;
       line-height: rem(31);
       width: 35px;
