--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -7,12 +7,12 @@
   <ul class="share-links">
     <li class="share-links-item">
       <a href="#">
-        <icon-component class="-xsmall" name="icon-facebook"></icon-component>
+        <icon-component class="-small" name="icon-facebook"></icon-component>
       </a>
     </li>
     <li class="share-links-item">
       <a href="#">
-        <icon-component class="-xsmall" name="icon-twitter"></icon-component>
+        <icon-component class="-small" name="icon-twitter"></icon-component>
       </a>
     </li>
   </ul>
