--- a/app/scripts/components/Modal/modal-template.html
+++ b/app/scripts/components/Modal/modal-template.html
@@ -2,7 +2,7 @@
   <div class="row align-center">
     <div class="modal-content column small-12" @click="stopProp">
       <button-component :click="close" class="close-modal">
-        <icon-component name="icon-close" class="-medium"></icon-component>
+        <icon-component name="icon-close" class="-large"></icon-component>
       </button-component>
       <slot></slot>
     </div>
