--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -6,7 +6,7 @@
     <h2 class="header-title">Forests in conflict</h2>
   </header>
   <button @click="toggleModal" class="share-button" type="button">
-    <icon-component class="-xsmall" name="icon-share"></icon-component>
+    <icon-component class="-small" name="icon-share"></icon-component>
   </button>
   <sidebar-component></sidebar-component>
   <map-component></map-component>
