updates home texts according to feedback

--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -2,7 +2,7 @@
 
   <div class="row" v-if="location.home">
     <div class="column small-11 medium-6 small-offset-1 medium-offset-1 hero-home-content">
-      <h2>Transform data on SDGs into effective applications</h2>
+      <h2>Transform data on SDGs into effective applications and visualisations</h2>
       <div class="c-button-group">
         <button-component class="-bordered -big" :click="goToFindOutMore">Find Out More</button-component>
       </div>
