countries view + charts + work in progress

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -15,8 +15,11 @@
           <li :class="getTabClass('/playground')">
             <router-link to="/playground">Playground</router-link>
           </li>
+          <li :class="getTabClass('/countries')">
+            <router-link to="/countries">Countries</router-link>
+          </li>
           <li :class="getTabClass('/map')">
-            <router-link to="/map">Explore</router-link>
+            <router-link to="/map">Map</router-link>
           </li>
         </ul>
       </nav>
