--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" v-if="location.playground">
     <div class="column small-12 medium-10 hero-app-content" v-if="!location.home">
       <search-component></search-component>
     </div>
