--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -20,6 +20,7 @@ $h2-font-size: rem(44);
 $h3-font-size: rem(20);
 $h4-font-size: rem(16);
 
+$font-size-large: rem(28);
 $font-size-normal: rem(18);
 $font-size-small: rem(16);
 $font-size-xsmall: rem(14);
