includes chart into the ranking items list

--- a/app/scripts/components/Ranking/ranking-template.html
+++ b/app/scripts/components/Ranking/ranking-template.html
@@ -1,6 +1,10 @@
 <div class="c-ranking">
   <ul class="ranking-list">
-    <li class="ranking-list-item" v-for="(item, index) in list" :key="item.id">
+    <li class="ranking-list-item"
+        v-for="(item, index) in list"
+        :key="item.id"
+        v-if="hasProps(item)"
+    >
       <span class="list-item-index">{{index + 1}}</span>
       {{item.properties.name}}
       <chart-component :options="item.properties" :container="item.id"></chart-component>
