adds country detail view

--- a/app/scripts/components/Ranking/ranking-template.html
+++ b/app/scripts/components/Ranking/ranking-template.html
@@ -4,6 +4,7 @@
         v-for="(item, index) in list"
         :key="item.id"
         v-if="hasProps(item)"
+        @click="selectItem(item.properties.name)"
     >
       <span class="list-item-index">{{index + 1}}</span>
       {{item.properties.name}}
