--- a/app/scripts/components/Ranking/ranking-style.scss
+++ b/app/scripts/components/Ranking/ranking-style.scss
@@ -15,6 +15,7 @@
       justify-content: space-between;
 
       padding: $small-margin 0;
+      cursor: pointer;
 
       > .list-item-index {
         display: flex;
@@ -28,7 +29,7 @@
       }
 
       &:hover {
-        background-color: darken($base-bg-color, 6.5%);
+        background-color: darken($base-bg-color, 5.5%);
 
         > .list-item-index {
           border-right: 1px solid $theme-base;
