--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -5,17 +5,28 @@
         </dropdown-component>
       </div>
       <div class="column small-10 medium-6 large-7 small-offset-1 medium-offset-0 search-bar">
-          <input type="search" v-model.trim="queryState" placeholder="Search for data..."
-                 class="search-input">
-          <ul class="search-results-list">
+          <input
+            type="search"
+            placeholder="Search for data..."
+            class="search-input"
+            v-model.trim="queryState"
+            @keyup.down="navigateDown"
+            ref="search-input"
+          >
+          <ul class="search-results-list" ref="search-results-list">
             <li v-if="loading" class="search-results-item">{{loadingMessage}}</li>
             <li v-else-if="error" class="search-results-item -error">{{errorMessage}}</li>
             <li v-else-if="notFound" class="search-results-item">{{notFoundMessage}}</li>
             <li
-              v-else-if="query"
-              v-for="result in results"
+              tabindex="-1"
               class="search-results-item -item"
-              @click="selectDataset(result)">
+              v-else-if="query"
+              v-for="(result, index) in results"
+              @click="selectDataset(result)"
+              @keyup.enter="selectDataset(result)"
+              @keyup.down.stop.prevent.capture="navigateDown"
+              @keyup.up="navigateUp"
+            >
               {{result.name}}
             </li>
           </ul>
