--- a/app/scripts/components/Chart/chart-template.html
+++ b/app/scripts/components/Chart/chart-template.html
@@ -1,3 +1,3 @@
 <div class="c-chart">
-  <div class="chart-container" :ref="name"></div>
+  <div class="chart-container" :ref="chart"></div>
 </div>
